--- a/R/data_collection_tracker.Rmd
+++ b/R/data_collection_tracker.Rmd
@@ -84,14 +84,36 @@ dfa_cl_log <- read_csv(file = "../inputs/combined_logic_spatial_and_others_check
   
 # change response logs which affect stats during data collection
 
+cl_log_change_response <- dfa_cl_log %>% 
+  filter(type == "change response", 
+         !is.na(value),
+         reviewed == 1,
+         adjust_log != "delete_log",
+         !issue_id %in%
+           c("other_checks", "logic_c_main_language",  "logic_c_internet_awareness")) %>% 
+         select(uuid, name, value)
   
+  # updated tool data
+dfa_updated_tool_data <- dfa_tool_data 
   
+# get uuids from cleaning log
+
+  uuids_chg_response <- cl_log_change_response %>% pull(uuid) %>% unique()
   
+  for (current_uuid in uuids_chg_response) {
+  current_uuid_data <- cl_log_change_response %>% 
+    filter(uuid == current_uuid) %>% 
+    mutate(value = ifelse(name == "enumerator_id", as.numeric(value), value)) %>% 
+    pivot_wider(names_from = "name", values_from = "value", uuid)
+  print(current_uuid_data)
   
+ # process current updates
+  dfa_current_updated <- dfa_updated_tool_data %>% 
+    rows_update(y = current_uuid_data, by = "uuid")
   
-  
-  
-  
+  # update the parent dataset with current updates
+  dfa_updated_tool_data <- dfa_current_updated
+} 
 
 
 
