report:daily enumerator perfomance

--- a/R/data_collection_tracker.Rmd
+++ b/R/data_collection_tracker.Rmd
@@ -152,8 +152,16 @@ dfa_updated_tool_data %>%
   select(-int.surveys_and_deletion) %>% 
   DT::datatable()
 
-
-
 ```
+### Daily enumerator perfomance
+The average time for all the data is: **`r round(mean(dfa_enum_performance$int.survey_time_interval), 0)`** Minutes
 
+
+```{r}
+dfa_enum_performance %>% 
+group_by(district_name, enumerator_id) %>% 
+  summarise(number_of_interviews_done = n(), `average_survey_time(minutes)` = round(mean(int.survey_time_interval, na.rm = TRUE), 0))%>%
+  DT::datatable()
+  
+```
 
