--- a/R/data_collection_tracker.Rmd
+++ b/R/data_collection_tracker.Rmd
@@ -180,6 +180,14 @@ dfa_cl_log %>%
   group_by(enumerator_id) %>% 
   summarise(number_of_issues_by_enumerator_id = n()) %>% 
   DT::datatable()
+```
+### Number of issues by enumerator and issue_id
+
+```{r, echo = FALSE}
+dfa_cl_log %>% 
+  group_by(enumerator_id, issue_id) %>% 
+  summarise(number_of_issues_by_enumerator_and_by_issue_id = n()) %>%
+  DT::datatable()
 
 ```
 
