--- a/R/data_collection_tracker.Rmd
+++ b/R/data_collection_tracker.Rmd
@@ -223,8 +223,48 @@ dfa_cl_log %>%
   group_by(enumerator_id) %>% 
   summarise(number_of_surveys_for_deletion_by_enumerator = n()) %>%
   DT::datatable()
+```
+### Map of surveys for deletion
 
+```{r, echo = FALSE, out.width="100%"}
+# popup
+labels_pts <- ~sprintf(
+  "<strong>Status and Name: %s</strong><br/>
+      Point Number :  <strong>%s</strong><br/>
+      Issue ID :  <strong>%s</strong><br/>
+      Issue :  <strong>%s</strong><br/>
+      Enumerator ID :  <strong>%s</strong>",
+  int.status, point_number, issue_id, issue, enumerator_id
+) %>% 
+  lapply(htmltools::HTML)
 
+dfa_cl_log %>% 
+  filter(type == "remove_survey", reviewed == 1, adjust_log != "delete_log") %>% 
+  group_by(uuid, status, sub_county_name, settlement_name, latitude, longitude) %>% 
+  summarise(start_date = paste(start_date, collapse = " : "),
+            enumerator_id = paste(enumerator_id, collapse = " : "),
+            district_name = paste(district_name, collapse = " : "),
+            point_number = paste(point_number, collapse = " : "),
+            type = paste(type, collapse = " : "),
+            name = paste(name, collapse = " : "),
+            current_value = paste(current_value, collapse = " : "),
+            value = paste(value, collapse = " : "),
+            issue_id = paste(issue_id, collapse = " : "),
+            issue = paste(issue, collapse = " : ")
+  )%>% 
+  unique() %>% 
+  mutate(int.status = ifelse(status == "refugee", 
+                             glue("{status}_{settlement_name}"), glue("{status}_{sub_county_name}"))) %>% 
+  leaflet() %>% 
+  addTiles() %>%
+  addCircleMarkers(~longitude,
+                   ~latitude,
+                   popup = labels_pts,
+                   radius = 10,
+                   color = "red",
+                   stroke = FALSE, fillOpacity = 0.9,
+                   label = labels_pts,
+                   clusterOptions = markerClusterOptions())
 
 ```
 
